feat: enable new architecture, android edge-to-edge, update text input mask

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
   <color name="iconBackground">#2260FF</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#2260FF</color>
+  <color name="datePicker_colorAccent">#2260FF</color>
+  <color name="datePicker_textColorPrimary">#2260FF</color>
+  <color name="timePicker_background">#2260FF</color>
+  <color name="timePicker_numbersBackgroundColor">#2260FF</color>
 </resources>
