--- a/android/app/src/main/res/values-night/colors.xml
+++ b/android/app/src/main/res/values-night/colors.xml
@@ -1,1 +1,4 @@
-<resources/>
+<resources>
+  <color name="timePicker_background">#2260FF</color>
+  <color name="timePicker_numbersBackgroundColor">#2260FF</color>
+</resources>
