--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,20 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-    <item name="android:textColor">@android:color/black</item>
-    <item name="android:editTextStyle">@style/ResetEditText</item>
+  <style name="AppTheme" parent="Theme.EdgeToEdge.Light">
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="android:statusBarColor">#2260FF</item>
-    <item name="android:datePickerDialogTheme">@style/Dialog.Theme</item>
-    <item name="android:timePickerDialogTheme">@style/Dialog.Theme</item>
+    <item name="enforceNavigationBarContrast">false</item>
+    <item name="android:datePickerDialogTheme">@style/DatePickerDialogTheme</item>
+    <item name="android:timePickerStyle">@style/TimePickerTheme</item>
   </style>
-  <style name="ResetEditText" parent="@android:style/Widget.EditText">
-    <item name="android:padding">0dp</item>
-    <item name="android:textColorHint">#c8c8c8</item>
-    <item name="android:textColor">@android:color/black</item>
+  <style name="DatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+    <item name="colorAccent">@color/datePicker_colorAccent</item>
+    <item name="android:textColorPrimary">@color/datePicker_textColorPrimary</item>
   </style>
-  <style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
-    <item name="colorAccent">#2260FF</item>
+  <style name="TimePickerTheme" parent="android:Widget.Material.Light.TimePicker">
+    <item name="android:background">@color/timePicker_background</item>
+    <item name="android:numbersBackgroundColor">@color/timePicker_numbersBackgroundColor</item>
   </style>
   <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
     <item name="windowSplashScreenBackground">@color/splashscreen_background</item>
